@@ -8,6 +8,7 @@ Version 2.5
       Playlist's layout items.
 
   BUGFIXES:
+    * Fix moving applets rightward in the context toolbar.
     * Fix breadcrumbs not working properly for the file browser.
     * Disable cover fetching action for tracks not in the collection to avoid
       crash when trying to "save as" a cover. (BR 287604)
